fixing spacing between footer and main tag

--- a/assets/styles/pages/contact.scss
+++ b/assets/styles/pages/contact.scss
@@ -1,103 +1,104 @@
 main > .contact-form {
-  position:relative;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 16px;
-  width: 77vw;
-  background-color: #fff;
-  margin-top: 1rem;
-  border-radius: 20px;
-  padding: 32px;
-  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 16px;
+    width: 77vw;
+    background-color: #fff;
+    margin-top: 1rem;
+    border-radius: 20px;
+    padding: 32px;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
 
-  .form-title {
-    text-align: center;
-    grid-column: 1 / -1;
-    h4 {
-      margin-bottom: 8px;
-      color: #888;
-      font-size: 18px;
+    .form-title {
+        text-align: center;
+        grid-column: 1 / -1;
+        h4 {
+            margin-bottom: 8px;
+            color: #888;
+            font-size: 18px;
+        }
+
+        h2 {
+            color: #14438b;
+            font-size: 20px;
+        }
     }
 
-    h2 {
-      color: #14438b;
-      font-size: 20px;
+    .form-group {
+        label {
+            display: block;
+            color: #888;
+            font-size: 14px;
+        }
+
+        .form-element {
+            appearance: none;
+            outline: none;
+            border: none;
+            margin-top: 8px;
+            display: block;
+            width: 100%;
+            border-radius: 8px;
+            padding: 25px 16px;
+            background-color: #f3f3f3;
+            transition: 0.4s;
+
+            &:focus {
+                box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
+                background-color: #fff;
+            }
+        }
+
+        textarea {
+            resize: none;
+            min-height: 100px;
+            width: 100%;
+        }
     }
-  }
 
-  .form-group {
-    label {
-      display: block;
-      color: #888;
-      font-size: 14px;
+    .form-group.full {
+        grid-column: 1 / -1;
     }
 
-    .form-element {
-      appearance: none;
-      outline: none;
-      border: none;
-      margin-top: 8px;
-      display: block;
-      width: 100%;
-      border-radius: 8px;
-      padding: 25px 16px;
-      background-color: #f3f3f3;
-      transition: 0.4s;
-
-      &:focus {
-        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
-        background-color: #fff;
-      }
+    .form-group.full textarea {
+        width: 100%;
     }
+    .submit-group {
+        grid-column: 1 / -1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
 
-    textarea {
-      resize: none;
-      min-height: 100px;
-      width: 100%;
+        input[type="submit"] {
+            appearance: none;
+            border: none;
+            outline: none;
+            background: none;
+
+            padding: 12px 16px;
+            background-color: #14438b;
+            border-radius: 8px;
+            color: #fff;
+            cursor: pointer;
+            transition: 0.4s;
+
+            &:hover {
+                background-color: #fff;
+                color: #14438b;
+            }
+        }
     }
-  }
-
-  .form-group.full {
-    grid-column: 1 / -1;
-  }
-
-  .form-group.full textarea {
-    width: 100%;
-  }
-  .submit-group {
-    grid-column: 1 / -1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    input[type="submit"] {
-      appearance: none;
-      border: none;
-      outline: none;
-      background: none;
-
-      padding: 12px 16px;
-      background-color: #14438b;
-      border-radius: 8px;
-      color: #fff;
-      cursor: pointer;
-      transition: 0.4s;
-
-      &:hover {
-        background-color: #fff;
-        color: #14438b;
-      }
-    }
-  }
 }
 
-@mixin contact-max-width--960px{
-  main .contact-form{
-    width:100%;
-    display:flex;
-    flex-direction: column;
-    margin:0;
-    
-  }
+@mixin contact-max-width--960px {
+    main > .contact-form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: unset;
+        border-radius: unset;
+        box-shadow: unset;
+    }
 }
